k8s/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: kbot
  labels:
    run: web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: web
          image: ghcr.io/kbot-discord/web:latest
          ports:
            - containerPort: 3000
          resources: {}
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 3
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 3
            httpGet:
              path: /
              port: 3000
