k8s/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kbot
  labels:
    name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
